<resources><string name="app_name">GroceryMate</string><string name="action_settings">Settings</string><string name="btnOk">OK</string><string name="btn_Login">Sign in</string><string name="receipts">Receipts</string><string name="visualization">Visualization</string><string name="searchProduct">Enter a product.</string><string name="searchBtn">Search prodcuts</string><string name="cameraBtn">Scan receipt</string><string name="searching">Searching for</string><string name="textStore">Store</string><string name="textDate">Date</string><string name="textTotal">Euro</string><string name="textItem">Item</string><string name="edit">Edit</string><string name="delete">Delete</string></resources>